--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -18,7 +21,9 @@
         <a href="#">MENU</a>
     </div>
     <div class="contact">
-        <button type="button">CONTACT</button>
+        <form action="https://google.com">
+            <button type="submit" value="googleWebPage"></a>CONTACT</button>
+        </form>
     </div>
 </div>
 </body>
