--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <a href="#">MENU</a>
     </div>
     <div class="contact">
-        <form action="https://google.com">
-            <button type="submit" value="googleWebPage"></a>CONTACT</button>
-        </form>
+        <a href="https://google.com">CONTACT</a>
     </div>
 </div>
 </body>
