add images folder

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <a href="https://google.com">CONTACT</a>
     </div>
 </div>
+<div class="contactFormBackground">
+
+</div>
 </body>
 </html>
