add style and background

--- a/index.html
+++ b/index.html
@@ -24,8 +24,38 @@
         <a href="https://google.com">CONTACT</a>
     </div>
 </div>
-<div class="contactFormBackground">
-
+<div class="contactFormContainer">
+    <img src="./images/bgImage.jpg" alt="beachImage" class="bgImage">
+    <div class="contactForm">
+        <h1>Contact Form</h1>
+        <p>Please fill in your information and we'll be sending your order.</p>
+        <div class="personalInfo">
+            <div class="label"> Your name
+                <input type="text" placeholder="first name">
+                <input type="text" placeholder="last name">
+            </div>
+            <div class="label"> Your email
+                <input type="text" placeholder="your_mail@mail.com">
+            </div>
+            <div class="label"> Phone
+                <input type="text" placeholder="000">
+                <input type="text" placeholder="000">
+                <input type="text" placeholder="0000">
+            </div>
+            <div class="label"> Message subject
+                <select name="select">
+                    <option value="value1">Complaint</option>
+                    <option value="value2">Rating</option>
+                    <option value="value3" selected>Other</option>
+                </select>
+            </div>
+            <div class="label"> Message
+                <textarea></textarea>
+            </div>
+            <div class="line"></div>
+            <a href="#">Submit form</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
