refactor project structure

--- a/nav.html
+++ b/nav.html
@@ -7,9 +7,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nav_style.css">
 </head>
 <body>
-
+<div class="header">
+    <div class="logo">
+        <h1>Rio Coffee</h1>
+    </div>
+    <div class="navigation">
+        <a href="#">HOME</a>
+        <a href="#">ABOUT</a>
+        <a href="#">SERVICES</a>
+        <a href="#">MENU</a>
+    </div>
+    <div class="contact">
+        <a href="https://google.com">CONTACT</a>
+    </div>
+</div>
 </body>
 </html>
