add form tag to each input

--- a/form.html
+++ b/form.html
@@ -19,24 +19,28 @@
                 <span class="fieldLabel">
                     Your name
                 </span>
-                <input type="text" placeholder="first name" class="field">
-                <input type="text" placeholder="last name" class="field">
+                <form class="inputForm">
+                    <input type="text" placeholder="first name" class="field">
+                    <input type="text" placeholder="last name" class="field">
+                </form>
             </div>
             <div class="label">
                 <span class="fieldLabel">
                     Your email
                 </span>
-                <input type="text" placeholder="your_mail@mail.com" class="field">
+                <form class="inputForm">
+                    <input type="text" placeholder="your_mail@mail.com" class="field">
+                </form>
             </div>
             <div class="label">
                 <span class="fieldLabel">
                     Phone *
                 </span>
-                <div class="telephoneInput">
+                <form class="inputForm">
                     <input type="tel" placeholder="000" class="fieldTel">
                     <input type="tel" placeholder="000" class="fieldTel">
                     <input type="tel" placeholder="0000" class="fieldTel">
-                </div>
+                </form>
             </div>
             <div class="label">
                 <span class="fieldLabel">
