add additional gradient class to each card

--- a/card.html
+++ b/card.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="cards">
-    <div class="card">
+    <div class="card weeklySalesGradient">
         <div class="icon">
             <img src="./images/show_chart-white-36dp.svg" alt="chart">
         </div>
@@ -21,7 +21,7 @@
         <div class="circleTop circleContainer"></div>
     </div>
 
-    <div class="card">
+    <div class="card weeklyOrdersGradient">
         <div class="icon">
             <img src="./images/bookmark_border-white-36dp.svg" alt="bookmark">
         </div>
@@ -32,7 +32,7 @@
         <div class="circleTop circleContainer"></div>
     </div>
 
-    <div class="card">
+    <div class="card visitorsOnlineGradient">
         <div class="icon">
             <img src="./images/local_pizza-white-36dp.svg" alt="pizza">
         </div>
