fix adaptation bug css_box_model

--- a/css_box_model.html
+++ b/css_box_model.html
@@ -10,7 +10,7 @@
 <body>
 <header id="header">
     <div class="bgImage"></div>
-    <div class="grid">
+    <div class="wrapper">
         <h1>Welcome to Acme Web Solutions</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci eum error earum soluta voluptatum
             nisi laboriosam eos saepe asperiores dolorum.
@@ -19,60 +19,48 @@
     </div>
 </header>
 <div class="content">
-    <div class="grid">
+    <div class="wrapper">
         <h2 class="contentTitle">Web & Application Development</h2>
         <div class="contentText">
-            <div class="container">
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Accusantium aut autem, deserunt dolore magnam sequi?
-                </p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Architecto autem doloremque ipsa, non saepe sit!
-                </p>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Blanditiis consequuntur, corporis cum dignissimos dolor eius facere
+                nisi placeat quo soluta.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Beatae consectetur cupiditate deleniti dicta dolore ea eum
+                exercitationem fuga incidunt libero.</p>
         </div>
     </div>
 </div>
 <div class="cardSection" id="cardSectionLink">
-    <div class="container">
+    <div class="wrapper">
         <ul>
             <li>
                 <div class="card">
-                    <div class="cardImage">
-                        <img src="https://static.pexels.com/photos/574077/pexels-photo-574077.jpeg" alt>
-                    </div>
-                    <div class="cardTitle">
+                    <img src="https://static.pexels.com/photos/574077/pexels-photo-574077.jpeg" alt>
+                    <div class="cardContent">
                         <h3>Web Development</h3>
-                    </div>
-                    <div class="cardText">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et quasi
-                            velit voluptatum cum maiores exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
+                            quasi velit voluptatum cum maiores exercitationem.</p>
                     </div>
                 </div>
-
+            </li>
+            <li>
                 <div class="card">
-                    <div class="cardImage">
-                        <img src="https://static.pexels.com/photos/261628/pexels-photo-261628.jpeg" alt>
-                    </div>
-                    <div class="cardTitle">
+                    <img src="https://static.pexels.com/photos/261628/pexels-photo-261628.jpeg" alt>
+                    <div class="cardContent">
                         <h3>Mobile Applications</h3>
-                    </div>
-                    <div class="cardText">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et quasi
-                            velit voluptatum cum maiores exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
+                            quasi velit voluptatum cum maiores exercitationem.</p>
                     </div>
                 </div>
-
+            </li>
+            <li>
                 <div class="card">
-                    <div class="cardImage">
-                        <img src="https://static.pexels.com/photos/265087/pexels-photo-265087.jpeg" alt>
-                    </div>
-                    <div class="cardTitle">
+                    <img src="https://static.pexels.com/photos/265087/pexels-photo-265087.jpeg" alt>
+                    <div class="cardContent">
                         <h3>Tech Marketing</h3>
-                    </div>
-                    <div class="cardText">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et quasi
-                            velit voluptatum cum maiores exercitationem.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
+                            quasi velit voluptatum cum maiores exercitationem.</p>
                     </div>
                 </div>
             </li>
@@ -80,13 +68,11 @@
     </div>
 </div>
 <div class="digitalNeeds">
-    <div class="digitalNeedsContent">
-        <div class="grid">
-            <h2>We handle all of your digital needs</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam rerum vel earum error fugiat
-                cupiditate,
-                dolore eius! Minus, explicabo.</p>
-        </div>
+    <div class="wrapper">
+        <h2>We handle all of your digital needs</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nam rerum vel earum error fugiat
+            cupiditate,
+            dolore eius! Minus, explicabo.</p>
     </div>
 </div>
 <div class="contactUs">
